Fixed some minor buggs preventing orange background image from stretching across the whole screen

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -13,7 +13,6 @@ header {
 
 .profilePicture {
   margin-top: 120px;
-  width: 100%;
   align-self: center;
 }
 
